--- a/Bertha/app/src/main/res/values/strings.xml
+++ b/Bertha/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Bertha</string>
+    <string name="title_activity_volunteer_selection">VolunteerSelection</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
